--- a/app/src/styles/base/_print.scss
+++ b/app/src/styles/base/_print.scss
@@ -143,7 +143,7 @@
   }
 
   .sub-heading::after {
-    content: ' ★ Generated on https://azurechecklist.com/ ★ ';
+    content: ' ★ Generated on https://localhost/ ★ ';
     white-space: pre;
   }
 
