--- a/app/src/views/base/footer.pug
+++ b/app/src/views/base/footer.pug
@@ -4,7 +4,7 @@ footer.page-footer
     .s-footer__badges
 
       p
-        a(href="https://github.com/ghostinthewires/Azure-Readiness-Checklist/")
+        a(href="https://github.com/twiztedgenius/Azure-Readiness-Checklist/")
           img(src="https://img.shields.io/badge/Azure%20Readiness%20Checklist-Followed-brightgreen" alt="Azure Readiness Checklist followed" data-canonical-src="https://img.shields.io/badge/Azure%20Readiness%20Checklist-Followed-brightgreen")
 
     .s-footer__grateful
@@ -15,4 +15,4 @@ footer.page-footer
       p Inspired by the #[a(href='https://gruntwork.io/devops-checklist/' target='_blank', rel="nofollow noopener noreferrer") Gruntwork Production Readiness Checklist] which covers AWS.
 
     .s-footer__made
-      p Made with ❤️ by #[a(href="https://www.ghostinthewires.co.uk/") ghostinthewires] #[a.twitter-follow-button(href="https://twitter.com/GhostInTheWire5" data-show-count="false" data-show-screen-name="false") Follow @GhostInTheWire5] for the Open-Source Community.
+      p Made with ❤️ by #[a(href="https://www.twiztedgenius.co.uk/") twiztedgenius] #[a.twitter-follow-button(href="https://twitter.com/GhostInTheWire5" data-show-count="false" data-show-screen-name="false") Follow @GhostInTheWire5] for the Open-Source Community.
